# drone

./: README.md  code.txt  environment_windows_cpu.yml  environment_wsl_gpu.yml  pyproject.toml  run-tests.bat  run-tests.sh  run-train-local.bat  run-train-local.sh  training_metrics.csv
scripts/: install_windows_cpu.bat  install_wsl_gpu.sh  verify_jax.py
src/live_mvp/: __init__.py  dyn.py  env_gt.py  jax_cache.py  live_map.py  play_interactive.py  play_interactive_3d.py  policy.py  render.py  timing.py  train_live.py  viz_metrics.py  viz_train_basic.py
src/live_mvp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_00_import.py  test_10_env_gt.py  test_20_rollout_smoke.py  test_30_env_properties.py  test_35_env_ray_invariants.py  test_40_render_properties.py  test_45_render_incidence_close.py  test_50_dyn_quat.py  test_55_dyn_controls.py  test_60_live_map_hash.py  test_65_live_map_updates.py  test_70_policy_anchor_center.py  test_70_policy_features.py  test_90_train_step_determinism.py
