
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "live_mvp"
version = "0.1.0"
description = "Minimal live-map + policy demo (hash-grid, anchor + compass)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "live_mvp authors"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
